2002-03-05  Jim Meyering  <meyering@lucent.com>

	* automake.in (@common_files): Add config.rpath.

2002-03-05  Kevin Ryde  <user42@zip.com.au>

	For PR automake/297:
	* lex.m4 (AM_PROG_LEX): Don't set LEX=${am_missing_run}flex until
	after AC_PROG_LEX, since it will try to run it and fail (in autoconf
	2.52 at least).

2002-02-25  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (scan_one_autoconf_file): Declare
	LEX_OUTPUT_ROOT and LEXLIB as configure variables when
	AM_PROG_LEX or AC_PROG_LEX are seen.  This allows to ...
	* lib/am/lex.am: ... remove the LEX_OUTPUT_ROOT and LEXLIB
	definitions.  Search %SOURCE% in $(srcdir).  Use s||| instead
	of s/// in the sed invocation, to support filenames containing
	slashes.
	* lib/am/yacc.am: Search %SOURCE% in $(srcdir).  Use s||| too.
	* tests/lex5.test, tests/yacc8.test: New files.
	* tests/Makefile.am (TESTS): Add them.

2002-02-23  Per Bothner  <per@bothner.com>

	* m4/depout.m4 (_AM_OUTPUT_DEPENDENCY_COMMANDS): Set `dirpart' to
	`.' in else branch.

2002-02-22  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/make.test: Revert the grep logic to work around a bug
	in NetBSD sh (see NetBSD Problem Report #11542).
	Reported by Patrick Welche.

2002-02-20  Tim Van Holder  <tim.van.holder@pandora.be>

	* m4/lispdir.m4: Redirect /dev/null to stdin when running $EMACS
	to try and prevent a non-lisp emacs from starting in interactive
	mode.
	* automake.texi: Document this change.

2002-02-19  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.texi (Macros): Split into ...
	(Public Macros, Private Macros): ... these.

2002-02-19  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/insthook.test: Use sed instead of "tail +X".

2002-02-18  Paul Eggert  <eggert@twinsun.com>

	* lib/depcomp: Don't use "tail +3"; it's not portable to
	POSIX 1003.1-2001 hosts.

2002-02-18  Jim Meyering  <meyering@lucent.com>

	* tests/cond12.test: Use sed 1q, not `head -n 1'.
	The latter is not portable to some old systems.