@@ -423,11 +423,6 @@ variable names; thus one writes @samp{bin_PROGRAMS} and not
 
 Not every sort of object can be installed in every directory.  Automake
 will flag those attempts it finds in error.
-@c FIXME: This is broken today: &am_primary_prefix will allow data_PROGRAMS
-@c because $datadir is defined before Makefile.am is parsed.  This
-@c means that passing the list of allowed directory suffix to
-@c &am_install_var or &am_primary_prefix is absolutely useless (except
-@c for 'noinst', 'check' and friends).
 Automake will also diagnose obvious misspellings in directory names.
 
 @cindex Extending list of installation directories
