@@ -1,4 +1,4 @@
-@set UPDATED 21 February 2002
-@set UPDATED-MONTH February 2002
+@set UPDATED 5 March 2002
+@set UPDATED-MONTH March 2002
 @set EDITION 1.5e
 @set VERSION 1.5e
