@@ -1,3 +1,13 @@
+2002-03-05  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	Fix for PR automake/294:
+	* tests/dirforbid.test: New file.
+	* tests/Makefile.am (TESTS): Add it.
+	* automake.in (standard_prefix): New hash.
+	(am_primary_prefixes): Forbid standard_prefixes which are not
+	explicitely allowed.
+	* automake.texi (Uniform): Remove FIXME.
+
 2002-03-05  Jim Meyering  <meyering@lucent.com>
 
 	* automake.in (@common_files): Add config.rpath.
